# src/main/java/com/tripiz/api/controllers/StationResource.java
@@ -1,14 +1,18 @@
 package com.tripiz.api.controllers;
 
 
+import com.tripiz.api.domain.Station;
 import com.tripiz.api.model.CreateStationRequestDTO;
+import com.tripiz.api.model.GetStationsRequestDTO;
 import com.tripiz.api.model.StationDTO;
 import com.tripiz.api.service.StationService;
+import com.tripiz.api.service.mapper.StationMapper;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
 
 @RestController
@@ -17,6 +21,7 @@ import java.util.UUID;
 public class StationResource {
 
     private final StationService stationService;
+    private final StationMapper stationMapper;
 
     @PostMapping("/createStation")
     public ResponseEntity<Void> createStation(@RequestBody CreateStationRequestDTO request) {
@@ -59,4 +64,12 @@ public class StationResource {
         int count = stationService.countAllStations();
         return ResponseEntity.ok(count);
     }
+
+    @PostMapping("/stations/within-square")
+    public ResponseEntity<List<StationDTO>> getStationsInSquare(@RequestBody GetStationsRequestDTO bounds) {
+        List<StationDTO> stations = stationService.findAllStationsWithinSquare(bounds);
+        return ResponseEntity.ok(stations);
+    }
+
+
 }
